# Qshing_server

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  build-spec.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  test.yml
migrations/: env.py
scripts/: init_db.py  lint.sh  mongo-init.js  monitor.sh  optimize-deployment.sh  run_tests.sh  setup-remote-server.sh  test-docker-service.sh
src/qshing_server/: main.py
src/qshing_server/api/: __init__.py  deps.py  health.py  phishing_routers.py
src/qshing_server/core/: config.py  exceptions.py
src/qshing_server/db/: db_manager.py  models.py
src/qshing_server/dto/: base.py  phishing_schema.py
src/qshing_server/service/: phishing_analyzer.py  phishing_crud.py
src/qshing_server/service/model/: model_manager.py  preprocessor.py  qbert.py  tokenizer.py
src/qshing_server/service/parser/: html_loader.py
src/qshing_server/utils/: enums.py  logging.py
tests/: conftest.py  test_db_integration.py
