[project]
name = "Qshing_server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bnbong", email = "bbbong9@gmail.com"},
]
dependencies = [
    "pre-commit>=4.1.0",
    "mypy>=1.14.1",
    "black>=24.10.0",
    "isort>=5.13.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
