[project]
name = "Qshing_server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bnbong", email = "bbbong9@gmail.com"},
]
dependencies = [
    "pydantic-settings>=2.7.1",
    "uvicorn[standard]>=0.34.0",
    "fastapi>=0.115.7",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "mypy>=1.14.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
]

[tool.pdm]
distribution = false
